--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   "homepage": "https://github.com/gptcarts52-lgtm/artsfest-gptc-cherthala#readme",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
-    "next": "^14.0.4",
+    "next": "^14.2.23",
     "nodemailer": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
-    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
