--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
+    "write-excel-file": "^2.3.10",
     "zod": "^3.24.1"
   },
   "devDependencies": {
