--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/gptcarts52-lgtm/artsfest-gptc-cherthala#readme",
   "dependencies": {
+    "@fontsource/noto-sans-malayalam": "^5.2.8",
     "@prisma/client": "^5.22.0",
     "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
