--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^3.4.0",
     "write-excel-file": "^2.3.10",
     "zod": "^3.24.1"
