--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fontsource/noto-sans-malayalam": "^5.2.8",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.22.0",
+    "@sparticuz/chromium": "^143.0.4",
     "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.1",
@@ -43,6 +44,7 @@
     "nodemailer": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.37.2",
+    "puppeteer-core": "^22.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "regenerator-runtime": "^0.14.1",
