fix: switch to chrome-aws-lambda for Vercel compatibility
- Replaced @sparticuz/chromium with chrome-aws-lambda
- chrome-aws-lambda is more stable and tested on Vercel
- Fixed executablePath API (property vs function)
- Compatible puppeteer-core@10.1.0
- Resolves 'brotli bin directory not found' error

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.1",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.1.0",
@@ -44,7 +45,7 @@
     "nodemailer": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.37.2",
-    "puppeteer-core": "^22.12.1",
+    "puppeteer-core": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "regenerator-runtime": "^0.14.1",
