--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "tsx prisma/seed.ts",
+    "prisma:restore": "tsx prisma/backup_seed.ts",
     "db:setup": "prisma migrate dev && prisma db seed",
     "postinstall": "prisma generate"
   },
