--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/gptcarts52-lgtm/artsfest-gptc-cherthala#readme",
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@fontsource/noto-sans-malayalam": "^5.2.8",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.22.0",
