--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.22.0",
     "@sparticuz/chromium": "^143.0.4",
+    "@types/web-push": "^3.6.4",
     "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.1",
     "chrome-aws-lambda": "^10.1.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
@@ -52,6 +54,7 @@
     "react-dom": "^18.3.1",
     "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^3.4.0",
+    "web-push": "^3.6.7",
     "write-excel-file": "^2.3.10",
     "zod": "^3.24.1"
   },
